<?xml version="1.0"?>
<package format="2">
  <name>testbot_description</name>
  <version>0.0.0</version>
  <description>The testbot_description package</description>

  <maintainer email="madelyne@todo.todo">madelyne</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

</package>
